Fix icon alignment with Heebo

--- a/common/static/common/styles/studio/_icons.scss
+++ b/common/static/common/styles/studio/_icons.scss
@@ -16,7 +16,7 @@
 
 .icon-inline {
   line-height: $line-height-base;
-  vertical-align: top;
+  vertical-align: middle;
   font-size: $font-size-base;
 }
 
